@@ -1,10 +1,14 @@
-2014-05-27  Charlie Zender  <zender@uci.edu>
+2014-05-28  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.4 release procedure:
  	Changes since nco-4_4_3: -x tolerance, --rad orphans, CERES, mmr
 	cd ~/nco;cvs tag -d nco-4_4_4;cvs tag -d nco-4_4_4-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.4 release"
 	cvs tag -c nco-4_4_4;cvs tag -c nco-4_4_4-1
+
+	* Update --mask_condition documentation
+
+2014-05-27  Charlie Zender  <zender@uci.edu>
 
 	* Regression test for negative-valued ncwa --mask_condition works
 
